tests/errors/vis_private/vis_private.c
#error vis_private:6:3 The name 'vis_private_sub' here should denote to some value; but not found.
